<resources>
    <string name="app_name">First Project</string>

    <!-- first row strings -->
    <string name="think">Think</string>
    <string name="develop">Develop</string>
    <string name="create">Create</string>

    <!-- third row strings -->
    <string name="udacity_string">Udacity</string>
    <string name="street_name_string">2465 Latham St</string>
    <string name="zip_code_string">Mountain View, CA 94043</string>
    <string name="phone_number">65&#8211;555&#8211;5555</string>

    <!-- Footer string -->
    <string name="footer_string">Your key to success</string>
</resources>
