<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.firstproject.MainActivity"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/header_image"
        android:src="@drawable/header"
        style="@style/image_header"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/padding_rows">

            <TextView
                android:id="@+id/think_string"
                android:text="@string/think"
                style="@style/think_string"/>

            <TextView
                android:id="@+id/develop_string"
                android:text="@string/develop"
                style="@style/develop_string"/>

            <TextView
                android:id="@+id/create_string"
                android:text="@string/create"
                style="@style/create_string"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/image_one"
            android:src="@drawable/picture_one"
            style="@style/image_one"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/image_two"
            android:src="@drawable/picture_two"
            style="@style/image_two"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/image_three"
            android:src="@drawable/picture_three"
            style="@style/image_three"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/padding_rows"
            android:background="@color/background_color">

            <TextView
                android:id="@+id/udacity_string"
                android:text="@string/udacity_string"
                style="@style/basicStringThirdRow"/>

            <TextView
                android:id="@+id/street_name"
                android:text="@string/street_name_string"
                style="@style/street_name_string"/>

            <TextView
                android:id="@+id/zip_code"
                android:text="@string/zip_code_string"
                style="@style/zip_code_string"/>

            <TextView
                android:id="@+id/phone_number"
                android:text="@string/phone_number"
                style="@style/phone_number_string"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        android:text="@string/footer_string"
        style="@style/footer_string"/>

</LinearLayout>
